--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@emotion/styled": "^11.10.4",
     "@material-ui/icons": "^4.11.3",
     "@mui/material": "^5.10.6",
+    "@perseid/client": "^0.0.13",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^29.2.4",
